# string-matching-algorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Algorithms/: Algorithm.cpp  Algorithm.h  BoyerMoore.cpp  BoyerMoore.h  KnuthMorrisPratt.cpp  KnuthMorrisPratt.h  Prefixes.cpp  Prefixes.h  Preprocessor.cpp  Preprocessor.h  RabinKarp.cpp  RabinKarp.h  ShiftAnd.cpp  ShiftAnd.h  ZBlocks.cpp  ZBlocks.h
Examples/: abc10  abc1mln  abc20  abc5  abra-exm  abra-pat  dna10  dna100thd.txt  dna1mln.txt  dna20  dna30  dna500thd.txt  dna50thd.txt  exm  exm2  exm3  pat1  pat2  pat4  rand1mln
Utils/: Bitwise.cpp  Bitwise.h  FileUtils.cpp  FileUtils.h
